--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -646,6 +646,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On remarque qu'on a un regroupement de `MEDV` au alentours de 20. Il doit s'agir des maisons de la classe moyenne, les plus nombreuses. On a ensuite un pic aux alentours de 50, cela est probablement du aux riches qui ont de belles maisons. On peut voir l'écart des richesses.  \n",
+    "  \n",
     "Certaines valeurs comme `PTRATIO` ou `LSTAT`, représentent un ratio sont multiplité par 100. Au lieu d'avoir 0.153 on a 15.3 par exemple. Cela peut poser un problème si on veut utiliser ces valeurs comme un scalaire.  \n",
     "  \n",
     "`CHAS` est un booléen, il ne faudrait pas la traiter comme une valeur continue.  "
